<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingEnd="15dp"
        android:background="@color/toolbar"
        tools:ignore="RtlSymmetry">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/settings_text"
            android:textColor="@color/toolbar_title"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background2"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/hello"
                    android:textColor="@color/text"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="5dp"
                    android:id="@+id/hello_world_view"
                    android:textColor="@color/main_text_color"
                    android:padding="10dp"
                    android:text="@string/hello_world"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background2"
                android:layout_height="match_parent">
                <Switch
                    android:text="@string/scope_mode_text"
                    android:padding="10dp"
                    android:id="@+id/scope_mode_switch"
                    android:thumbTint="#3998FF"
                    android:trackTint="#0088F4"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <TextView
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/main_text_color"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/scope_mode_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background2"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/mode_1"
                    android:textColor="@color/text"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/main_text_color"
                    android:padding="10dp"
                    android:text="@string/mode_explain_1"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background2"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/mode_2"
                    android:textColor="@color/text"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <TextView
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/mode_explain_2"
                    android:layout_width="match_parent"
                    android:textColor="@color/main_text_color"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background2"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/description_title"
                    android:textColor="@color/text"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <TextView
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/description_text"
                    android:layout_width="match_parent"
                    android:textColor="@color/main_text_color"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background2"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/about_text"
                    android:textColor="@color/text"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <TextView
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/main_text_color"
                    android:lineSpacingExtra="5dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/github_cokkeijigen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:src="@drawable/kyaru"
                    android:onClick="openGitHub"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>